# Maki

./: CMakeLists.txt  install.bash  note.txt
evaluation/: analyze_macro_invocations_in_program.py
src/: AlignmentMatchers.hh  BoundingMatchers.cc  BoundingMatchers.hh  CMakeLists.txt  Cpp2CASTConsumer#20241203a.cc  Cpp2CASTConsumer.cc  MacroExpansionArgument.hh  MacroForest.cc  RemoveComments.cc
tests/: trace.json  trace2.json
